syntax_analyzer/parser.output
Grammar

    0 $accept: program $end

    1 program: external_list

    2 external_list: external_list external
    3              | external

    4 external: declaration
    5         | statement

    6 declaration: type_specifier init_declarator_list ';'

    7 type_specifier: KW_INT
    8               | KW_FLOAT
    9               | KW_CHAR
   10               | KW_VOID
   11               | KW_STRUCT IDENTIFIER

   12 init_declarator_list: init_declarator_list ',' init_declarator
   13                     | init_declarator

   14 init_declarator: IDENTIFIER
   15                | IDENTIFIER ASSIGN expression

   16 statement: compound_statement
   17          | expression_statement
   18          | selection_statement
   19          | iteration_statement
   20          | jump_statement

   21 compound_statement: '{' statement_list_opt '}'

   22 statement_list_opt: statement_list
   23                   | /* empty */

   24 statement_list: statement_list statement
   25               | statement

   26 expression_statement: ';'
   27                     | expression ';'

   28 selection_statement: KW_IF '(' expression ')' statement
   29                    | KW_IF '(' expression ')' statement KW_ELSE statement

   30 iteration_statement: KW_WHILE '(' expression ')' statement
   31                    | KW_FOR '(' expression_statement expression_statement expression_opt ')' statement

   32 expression_opt: expression
   33               | /* empty */

   34 jump_statement: KW_RETURN expression_opt ';'
   35               | KW_BREAK ';'
   36               | KW_CONTINUE ';'

   37 expression: assignment_expression

   38 assignment_expression: logical_or_expression
   39                      | IDENTIFIER ASSIGN assignment_expression

   40 logical_or_expression: logical_or_expression OR logical_and_expression
   41                      | logical_and_expression

   42 logical_and_expression: logical_and_expression AND equality_expression
   43                       | equality_expression

   44 equality_expression: equality_expression EQ relational_expression
   45                    | equality_expression NE relational_expression
   46                    | relational_expression

   47 relational_expression: relational_expression LT additive_expression
   48                      | relational_expression LE additive_expression
   49                      | relational_expression GT additive_expression
   50                      | relational_expression GE additive_expression
   51                      | additive_expression

   52 additive_expression: additive_expression '+' multiplicative_expression
   53                    | additive_expression '-' multiplicative_expression
   54                    | multiplicative_expression

   55 multiplicative_expression: multiplicative_expression '*' unary_expression
   56                          | multiplicative_expression '/' unary_expression
   57                          | multiplicative_expression '%' unary_expression
   58                          | unary_expression

   59 unary_expression: primary_expression
   60                 | '-' unary_expression
   61                 | NOT unary_expression

   62 primary_expression: IDENTIFIER
   63                   | INT_CONST
   64                   | FLOAT_CONST
   65                   | STRING_LITERAL
   66                   | CHAR_LITERAL
   67                   | '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 57
'(' (40) 28 29 30 31 67
')' (41) 28 29 30 31 67
'*' (42) 55
'+' (43) 52
',' (44) 12
'-' (45) 53 60
'/' (47) 56
';' (59) 6 26 27 34 35 36
'{' (123) 21
'}' (125) 21
error (256)
INT_CONST (258) 63
FLOAT_CONST (259) 64
STRING_LITERAL (260) 65
CHAR_LITERAL (261) 66
IDENTIFIER (262) 11 14 15 39 62
KW_IF (263) 28 29
KW_ELSE (264) 29
KW_WHILE (265) 30
KW_FOR (266) 31
KW_RETURN (267) 34
KW_INT (268) 7
KW_FLOAT (269) 8
KW_CHAR (270) 9
KW_VOID (271) 10
KW_BREAK (272) 35
KW_CONTINUE (273) 36
KW_STRUCT (274) 11
OR (275) 40
AND (276) 42
EQ (277) 44
NE (278) 45
LE (279) 48
GE (280) 50
LT (281) 47
GT (282) 49
NOT (283) 61
ASSIGN (284) 15 39
UMINUS (285)
LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
program (44)
    on left: 1, on right: 0
external_list (45)
    on left: 2 3, on right: 1 2
external (46)
    on left: 4 5, on right: 2 3
declaration (47)
    on left: 6, on right: 4
type_specifier (48)
    on left: 7 8 9 10 11, on right: 6
init_declarator_list (49)
    on left: 12 13, on right: 6 12
init_declarator (50)
    on left: 14 15, on right: 12 13
statement (51)
    on left: 16 17 18 19 20, on right: 5 24 25 28 29 30 31
compound_statement (52)
    on left: 21, on right: 16
statement_list_opt (53)
    on left: 22 23, on right: 21
statement_list (54)
    on left: 24 25, on right: 22 24
expression_statement (55)
    on left: 26 27, on right: 17 31
selection_statement (56)
    on left: 28 29, on right: 18
iteration_statement (57)
    on left: 30 31, on right: 19
expression_opt (58)
    on left: 32 33, on right: 31 34
jump_statement (59)
    on left: 34 35 36, on right: 20
expression (60)
    on left: 37, on right: 15 27 28 29 30 32 67
assignment_expression (61)
    on left: 38 39, on right: 37 39
logical_or_expression (62)
    on left: 40 41, on right: 38 40
logical_and_expression (63)
    on left: 42 43, on right: 40 41 42
equality_expression (64)
    on left: 44 45 46, on right: 42 43 44 45
relational_expression (65)
    on left: 47 48 49 50 51, on right: 44 45 46 47 48 49 50
additive_expression (66)
    on left: 52 53 54, on right: 47 48 49 50 51 52 53
multiplicative_expression (67)
    on left: 55 56 57 58, on right: 52 53 54 55 56 57
unary_expression (68)
    on left: 59 60 61, on right: 55 56 57 58 60 61
primary_expression (69)
    on left: 62 63 64 65 66 67, on right: 59


State 0

    0 $accept: . program $end

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    KW_IF           shift, and go to state 6
    KW_WHILE        shift, and go to state 7
    KW_FOR          shift, and go to state 8
    KW_RETURN       shift, and go to state 9
    KW_INT          shift, and go to state 10
    KW_FLOAT        shift, and go to state 11
    KW_CHAR         shift, and go to state 12
    KW_VOID         shift, and go to state 13
    KW_BREAK        shift, and go to state 14
    KW_CONTINUE     shift, and go to state 15
    KW_STRUCT       shift, and go to state 16
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    ';'             shift, and go to state 19
    '{'             shift, and go to state 20
    '('             shift, and go to state 21

    program                    go to state 22
    external_list              go to state 23
    external                   go to state 24
    declaration                go to state 25
    type_specifier             go to state 26
    statement                  go to state 27
    compound_statement         go to state 28
    expression_statement       go to state 29
    selection_statement        go to state 30
    iteration_statement        go to state 31
    jump_statement             go to state 32
    expression                 go to state 33
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 1

   63 primary_expression: INT_CONST .

    $default  reduce using rule 63 (primary_expression)


State 2

   64 primary_expression: FLOAT_CONST .

    $default  reduce using rule 64 (primary_expression)


State 3

   65 primary_expression: STRING_LITERAL .

    $default  reduce using rule 65 (primary_expression)


State 4

   66 primary_expression: CHAR_LITERAL .

    $default  reduce using rule 66 (primary_expression)


State 5

   39 assignment_expression: IDENTIFIER . ASSIGN assignment_expression
   62 primary_expression: IDENTIFIER .

    ASSIGN  shift, and go to state 43

    $default  reduce using rule 62 (primary_expression)


State 6

   28 selection_statement: KW_IF . '(' expression ')' statement
   29                    | KW_IF . '(' expression ')' statement KW_ELSE statement

    '('  shift, and go to state 44


State 7

   30 iteration_statement: KW_WHILE . '(' expression ')' statement

    '('  shift, and go to state 45


State 8

   31 iteration_statement: KW_FOR . '(' expression_statement expression_statement expression_opt ')' statement

    '('  shift, and go to state 46


State 9

   34 jump_statement: KW_RETURN . expression_opt ';'

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    '('             shift, and go to state 21

    $default  reduce using rule 33 (expression_opt)

    expression_opt             go to state 47
    expression                 go to state 48
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 10

    7 type_specifier: KW_INT .

    $default  reduce using rule 7 (type_specifier)


State 11

    8 type_specifier: KW_FLOAT .

    $default  reduce using rule 8 (type_specifier)


State 12

    9 type_specifier: KW_CHAR .

    $default  reduce using rule 9 (type_specifier)


State 13

   10 type_specifier: KW_VOID .

    $default  reduce using rule 10 (type_specifier)


State 14

   35 jump_statement: KW_BREAK . ';'

    ';'  shift, and go to state 49


State 15

   36 jump_statement: KW_CONTINUE . ';'

    ';'  shift, and go to state 50


State 16

   11 type_specifier: KW_STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 51


State 17

   61 unary_expression: NOT . unary_expression

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 52
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    '('             shift, and go to state 21

    unary_expression    go to state 53
    primary_expression  go to state 42


State 18

   60 unary_expression: '-' . unary_expression

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 52
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    '('             shift, and go to state 21

    unary_expression    go to state 54
    primary_expression  go to state 42


State 19

   26 expression_statement: ';' .

    $default  reduce using rule 26 (expression_statement)


State 20

   21 compound_statement: '{' . statement_list_opt '}'

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    KW_IF           shift, and go to state 6
    KW_WHILE        shift, and go to state 7
    KW_FOR          shift, and go to state 8
    KW_RETURN       shift, and go to state 9
    KW_BREAK        shift, and go to state 14
    KW_CONTINUE     shift, and go to state 15
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    ';'             shift, and go to state 19
    '{'             shift, and go to state 20
    '('             shift, and go to state 21

    $default  reduce using rule 23 (statement_list_opt)

    statement                  go to state 55
    compound_statement         go to state 28
    statement_list_opt         go to state 56
    statement_list             go to state 57
    expression_statement       go to state 29
    selection_statement        go to state 30
    iteration_statement        go to state 31
    jump_statement             go to state 32
    expression                 go to state 33
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 21

   67 primary_expression: '(' . expression ')'

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    '('             shift, and go to state 21

    expression                 go to state 58
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 22

    0 $accept: program . $end

    $end  shift, and go to state 59


State 23

    1 program: external_list .
    2 external_list: external_list . external

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    KW_IF           shift, and go to state 6
    KW_WHILE        shift, and go to state 7
    KW_FOR          shift, and go to state 8
    KW_RETURN       shift, and go to state 9
    KW_INT          shift, and go to state 10
    KW_FLOAT        shift, and go to state 11
    KW_CHAR         shift, and go to state 12
    KW_VOID         shift, and go to state 13
    KW_BREAK        shift, and go to state 14
    KW_CONTINUE     shift, and go to state 15
    KW_STRUCT       shift, and go to state 16
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    ';'             shift, and go to state 19
    '{'             shift, and go to state 20
    '('             shift, and go to state 21

    $default  reduce using rule 1 (program)

    external                   go to state 60
    declaration                go to state 25
    type_specifier             go to state 26
    statement                  go to state 27
    compound_statement         go to state 28
    expression_statement       go to state 29
    selection_statement        go to state 30
    iteration_statement        go to state 31
    jump_statement             go to state 32
    expression                 go to state 33
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 24

    3 external_list: external .

    $default  reduce using rule 3 (external_list)


State 25

    4 external: declaration .

    $default  reduce using rule 4 (external)


State 26

    6 declaration: type_specifier . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 61

    init_declarator_list  go to state 62
    init_declarator       go to state 63


State 27

    5 external: statement .

    $default  reduce using rule 5 (external)


State 28

   16 statement: compound_statement .

    $default  reduce using rule 16 (statement)


State 29

   17 statement: expression_statement .

    $default  reduce using rule 17 (statement)


State 30

   18 statement: selection_statement .

    $default  reduce using rule 18 (statement)


State 31

   19 statement: iteration_statement .

    $default  reduce using rule 19 (statement)


State 32

   20 statement: jump_statement .

    $default  reduce using rule 20 (statement)


State 33

   27 expression_statement: expression . ';'

    ';'  shift, and go to state 64


State 34

   37 expression: assignment_expression .

    $default  reduce using rule 37 (expression)


State 35

   38 assignment_expression: logical_or_expression .
   40 logical_or_expression: logical_or_expression . OR logical_and_expression

    OR  shift, and go to state 65

    $default  reduce using rule 38 (assignment_expression)


State 36

   41 logical_or_expression: logical_and_expression .
   42 logical_and_expression: logical_and_expression . AND equality_expression

    AND  shift, and go to state 66

    $default  reduce using rule 41 (logical_or_expression)


State 37

   43 logical_and_expression: equality_expression .
   44 equality_expression: equality_expression . EQ relational_expression
   45                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 67
    NE  shift, and go to state 68

    $default  reduce using rule 43 (logical_and_expression)


State 38

   46 equality_expression: relational_expression .
   47 relational_expression: relational_expression . LT additive_expression
   48                      | relational_expression . LE additive_expression
   49                      | relational_expression . GT additive_expression
   50                      | relational_expression . GE additive_expression

    LE  shift, and go to state 69
    GE  shift, and go to state 70
    LT  shift, and go to state 71
    GT  shift, and go to state 72

    $default  reduce using rule 46 (equality_expression)


State 39

   51 relational_expression: additive_expression .
   52 additive_expression: additive_expression . '+' multiplicative_expression
   53                    | additive_expression . '-' multiplicative_expression

    '+'  shift, and go to state 73
    '-'  shift, and go to state 74

    $default  reduce using rule 51 (relational_expression)


State 40

   54 additive_expression: multiplicative_expression .
   55 multiplicative_expression: multiplicative_expression . '*' unary_expression
   56                          | multiplicative_expression . '/' unary_expression
   57                          | multiplicative_expression . '%' unary_expression

    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '%'  shift, and go to state 77

    $default  reduce using rule 54 (additive_expression)


State 41

   58 multiplicative_expression: unary_expression .

    $default  reduce using rule 58 (multiplicative_expression)


State 42

   59 unary_expression: primary_expression .

    $default  reduce using rule 59 (unary_expression)


State 43

   39 assignment_expression: IDENTIFIER ASSIGN . assignment_expression

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    '('             shift, and go to state 21

    assignment_expression      go to state 78
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 44

   28 selection_statement: KW_IF '(' . expression ')' statement
   29                    | KW_IF '(' . expression ')' statement KW_ELSE statement

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    '('             shift, and go to state 21

    expression                 go to state 79
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 45

   30 iteration_statement: KW_WHILE '(' . expression ')' statement

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    '('             shift, and go to state 21

    expression                 go to state 80
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 46

   31 iteration_statement: KW_FOR '(' . expression_statement expression_statement expression_opt ')' statement

    INT_CONST       shift, and go to state 1
    FLOAT_CONST     shift, and go to state 2
    STRING_LITERAL  shift, and go to state 3
    CHAR_LITERAL    shift, and go to state 4
    IDENTIFIER      shift, and go to state 5
    NOT             shift, and go to state 17
    '-'             shift, and go to state 18
    ';'             shift, and go to state 19
    '('             shift, and go to state 21

    expression_statement       go to state 81
    expression                 go to state 33
    assignment_expression      go to state 34
    logical_or_expression      go to state 35
    logical_and_expression     go to state 36
    equality_expression        go to state 37
    relational_expression      go to state 38
    additive_expression        go to state 39
    multiplicative_expression  go to state 40
    unary_expression           go to state 41
    primary_expression         go to state 42


State 47

   34 jump_statement: KW_RETURN expression_opt . ';'

    ';'  shift, and go to state 82


State 48

   32 expression_opt: expression .

    $default  reduce using rule 32 (expression_opt)


State 49

   35 jump_statement: KW_BREAK ';' .

    $default  reduce using rule 35 (jump_statement)


State 50

   36 jump_statement: KW_CONTINUE ';' .

    $default  reduce using rule 36 (jump_statement)


State 51

   11 type_specifier: KW_STRUCT IDENTIFIER .

    $default  reduce using rule 11 (type_specifier)


State 52

   62 primary_expression: IDENTIFIER .

    $default  reduce using rule 62 (primary_expression)


State 53

   61 unary_expression: NOT unary_expression .

    $default  reduce using rule 61 (unary_expression)


State 54

   60 unary_expression: '-' unary_expression .

    $default  reduce using rule 60 (unary_expression)


State 55

   25 statement_list: statement .
